[package]
name = "rayo_cache_clint"
version = "0.0.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"


[dependencies]
bytes = "1.10.0"
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = {version = "0.7.13", features = ["codec"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayo_cache_common = { path = "../common" }
