[package]
name = "rayo_cache_common"
version = "0.0.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"


[dependencies]
bytes = "1.10.0"
# anyhow = "1.0.95"
# bytes = "1.10.0"
# chrono = "0.4.39"
# clap = { version = "4.5.28", features = ["derive"] }
# dashmap = "6.1.0"
# futures = "0.3.31"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
# tokio = { version = "1.43.0", features = ["full"] }
# tokio-util = {version = "0.7.13", features = ["codec"]}
# tracing = "0.1.41"
# tracing-subscriber = "0.3.19"
# ulid = "1.2.0"